--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "devDependencies": {
-      "semantic-release-preconfigured-conventional-commits": "1.1.22"
+        "semantic-release-preconfigured-conventional-commits": "^1.1.85"
     },
     "engines": {
-      "node": "18.15"
+        "node": ">=22.00"
     }
-  }
+}
