fix secret name

--- a/.github/workflows/build-and-deploy-latex.yml
+++ b/.github/workflows/build-and-deploy-latex.yml
@@ -24,4 +24,4 @@ jobs:
     steps:
       - uses: DanySK/compile-and-publish-all-latex@2.0.24
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_ACCESS_TOKEN }}
